--- a/Tarea1.html
+++ b/Tarea1.html
@@ -148,7 +148,7 @@
       repudiandae fugiat natus amet nemo magni ipsum perspiciatis autem tempore temporibus ab sapiente dicta quasi enim
       corporis laboriosam exercitationem, molestiae quod.</p>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class=" col-sm-12 col-md-6">
         <div class="accordion" id="accordionExample">
@@ -214,8 +214,22 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6" ></div>
+      <div class="col-sm-12 col-md-6">
+        <div class="card">
+          <img src="slides/slide1.jpg" class="card-img-top" alt="...">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item bg-info text-white">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+            <li class="list-group-item">Lorem ipsum dolor sit.</li>
+            <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="container-fluid bg-dark mt-3 ">
+    <p class="text-white text-center p-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus ipsam aut rem adipisci corporis eius voluptatum officia consectetur consequuntur ex laborum, animi voluptatem saepe sapiente sit fugit porro vitae possimus fugiat perferendis iusto? Et, dolorum. Ex labore deleniti numquam error laborum, quae ut officiis id ad ea expedita rerum hic!</p>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
